Refactor - plugin 'spa-loader-content-html.js' versión 2

--- a/src/pages/01-bases-de-typescript/02-tipos-de-datos/08-void.html
+++ b/src/pages/01-bases-de-typescript/02-tipos-de-datos/08-void.html
@@ -19,9 +19,15 @@
 
     <section class="main__section">
 
-        <article class="section__img-script">
+        <article id="codeTs" class="section__img-script">
 
+            <!--  ***** Renderizar 'html' archivo .ts tipo 'markdown'  *****  -->
 
+        </article>
+
+        <article id="codeJs" class="section__img-script">
+
+            <!--  ***** Renderizar 'html' archivo .js tipo 'markdown'  *****  -->
 
         </article>
 
