--- a/src/markdown-shiki/01-bases-de-typescript/01-introduccion/inferir-tipos-ts.html
+++ b/src/markdown-shiki/01-bases-de-typescript/01-introduccion/inferir-tipos-ts.html
@@ -10,17 +10,19 @@
 
 
 <pre class="shiki dark-plus" style="background-color: #1E1E1E" tabindex="0"><code class="language-ts"><span class="line"><span style="color: #6A9955">/*</span></span>
-<span class="line"><span style="color: #6A9955">    -----------------------------------------------------------------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  udemy.antonydev.tech/  ------------------------------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  /typescript-completa-guia-manual-de-mano/  ----------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  /src/scripts/ts/01-bases/01-introduccion/  ----------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  /inferir-tipos.ts  ----------------------------------</span></span>
-<span class="line"><span style="color: #6A9955">    -----------------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    -------------------------------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  udemy.antonydev.tech/  --------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /cursos/  ---------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /typescript-completa-guia-manual-de-mano/  ------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /src/scripts/ts/01-bases-de-typescript/01-introduccion/  ----------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /inferir-tipos.ts  ------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    -------------------------------------------------------------------------------</span></span>
 <span class="line"><span style="color: #6A9955">*/</span></span>
 <span class="line"></span>
 <span class="line"></span>
 <span class="line"></span>
 <span class="line"><span style="color: #6A9955">//  -----  función anónima autoinvocada  -----</span></span>
+<span class="line"></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">(() </span><span style="color: #569CD6">=&gt;</span><span style="color: #D4D4D4"> {</span></span>
 <span class="line"></span>
@@ -63,7 +65,7 @@
 <span class="line"><span style="color: #6A9955">        -------------------------------------</span></span>
 <span class="line"><span style="color: #6A9955">    */</span></span>
 <span class="line"></span>
-<span class="line"></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  inferir tipos  -----</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">const</span><span style="color: #D4D4D4"> </span><span style="color: #4FC1FF">a</span><span style="color: #D4D4D4"> = </span><span style="color: #B5CEA8">10</span><span style="color: #D4D4D4">;   </span><span style="color: #6A9955">//  a: 10</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">let</span><span style="color: #D4D4D4"> </span><span style="color: #9CDCFE">b</span><span style="color: #D4D4D4"> = </span><span style="color: #B5CEA8">10</span><span style="color: #D4D4D4">;     </span><span style="color: #6A9955">//  b: number</span></span>
 <span class="line"></span>
@@ -75,18 +77,47 @@
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">let</span><span style="color: #D4D4D4"> </span><span style="color: #9CDCFE">d</span><span style="color: #D4D4D4">: </span><span style="color: #4EC9B0">number</span><span style="color: #D4D4D4">;</span></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">d</span><span style="color: #D4D4D4"> = </span><span style="color: #B5CEA8">30</span><span style="color: #D4D4D4">;</span></span>
-<span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">c</span><span style="color: #D4D4D4">, </span><span style="color: #9CDCFE">d</span><span style="color: #D4D4D4"> });</span></span>
 <span class="line"></span>
+<span class="line"></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">/*  </span></span>
+<span class="line"><span style="color: #6A9955">        -----------------</span></span>
+<span class="line"><span style="color: #6A9955">        -----  any  -----</span></span>
+<span class="line"><span style="color: #6A9955">        -----------------</span></span>
+<span class="line"><span style="color: #6A9955">    */</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  any  -----</span></span>
-<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">let</span><span style="color: #D4D4D4"> </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4">;          </span><span style="color: #6A9955">//  e: any</span></span>
-<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> = </span><span style="color: #B5CEA8">3.1416</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">let</span><span style="color: #D4D4D4"> </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4">;         </span></span>
+<span class="line"><span style="color: #D4D4D4">    </span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  number  -----</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> = </span><span style="color: #B5CEA8">3.1416</span><span style="color: #D4D4D4">;         </span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  string  -----</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> = </span><span style="color: #CE9178">&#39;Hola mundo&#39;</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  boolean  -----</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  array number  -----</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> = [</span><span style="color: #B5CEA8">1</span><span style="color: #D4D4D4">, </span><span style="color: #B5CEA8">2</span><span style="color: #D4D4D4">, </span><span style="color: #B5CEA8">3</span><span style="color: #D4D4D4">, </span><span style="color: #B5CEA8">4</span><span style="color: #D4D4D4">, </span><span style="color: #B5CEA8">5</span><span style="color: #D4D4D4">];</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  object  -----</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> = {</span></span>
+<span class="line"><span style="color: #D4D4D4">        </span><span style="color: #9CDCFE">name:</span><span style="color: #D4D4D4"> </span><span style="color: #CE9178">&#39;Antonio Cutillas&#39;</span><span style="color: #D4D4D4">,</span></span>
+<span class="line"><span style="color: #D4D4D4">        </span><span style="color: #9CDCFE">age:</span><span style="color: #D4D4D4"> </span><span style="color: #B5CEA8">45</span></span>
+<span class="line"><span style="color: #D4D4D4">    };</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"></span>
 <span class="line"></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  number  -----</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">let</span><span style="color: #D4D4D4"> </span><span style="color: #9CDCFE">f</span><span style="color: #D4D4D4">: </span><span style="color: #4EC9B0">number</span><span style="color: #D4D4D4"> = </span><span style="color: #B5CEA8">20</span><span style="color: #D4D4D4">;</span></span>
 <span class="line"></span>
-<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">e</span><span style="color: #D4D4D4">, </span><span style="color: #9CDCFE">f</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">f</span><span style="color: #D4D4D4"> });</span></span>
 <span class="line"></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  param string - return void  -----</span></span>
@@ -101,8 +132,7 @@
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  inferir tipo  -----</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">const</span><span style="color: #D4D4D4"> </span><span style="color: #4FC1FF">message</span><span style="color: #D4D4D4"> = </span><span style="color: #CE9178">&#39;Hello World&#39;</span><span style="color: #D4D4D4">;</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #DCDCAA">sayHello</span><span style="color: #D4D4D4">(</span><span style="color: #9CDCFE">message</span><span style="color: #D4D4D4">);</span></span>
-<span class="line"><span style="color: #D4D4D4">    </span></span>
-<span class="line"><span style="color: #D4D4D4">    </span></span>
+<span class="line"><span style="color: #D4D4D4">        </span></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">})();</span></span>
 <span class="line"></span>
