--- a/src/markdown-shiki/01-bases-de-typescript/02-tipos-de-datos/01-booleans-ts.html
+++ b/src/markdown-shiki/01-bases-de-typescript/02-tipos-de-datos/01-booleans-ts.html
@@ -10,16 +10,19 @@
 
 
 <pre class="shiki dark-plus" style="background-color: #1E1E1E" tabindex="0"><code class="language-ts"><span class="line"><span style="color: #6A9955">/*</span></span>
-<span class="line"><span style="color: #6A9955">    -------------------------------------------------------------------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  udemy.antonydev.tech/  --------------------------------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  /typescript-completa-guia-manual-de-mano/  ------------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  /src/scripts/ts/01-bases/02-tipos-de-datos/  ----------</span></span>
-<span class="line"><span style="color: #6A9955">    ----------  /01-booleans.ts  --------------------------------------</span></span>
-<span class="line"><span style="color: #6A9955">    -------------------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ---------------------------------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  udemy.antonydev.tech/  ----------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /cursos/  -----------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /typescript-completa-guia-manual-de-mano/  --------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /src/scripts/ts/01-bases-de-typescript/02-tipos-de-datos/  ----------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /01-booleans.ts  ----------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ---------------------------------------------------------------------------------</span></span>
 <span class="line"><span style="color: #6A9955">*/</span></span>
 <span class="line"></span>
 <span class="line"></span>
+<span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">(() </span><span style="color: #569CD6">=&gt;</span><span style="color: #D4D4D4"> {</span></span>
+<span class="line"></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">clear</span><span style="color: #D4D4D4">();</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">(</span><span style="color: #CE9178">&#39;</span><span style="color: #D7BA7D">\n</span><span style="color: #CE9178">&#39;</span><span style="color: #D4D4D4">);</span></span>
@@ -34,19 +37,18 @@
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">isSuperman</span><span style="color: #D4D4D4">, </span><span style="color: #9CDCFE">isBatman</span><span style="color: #D4D4D4">, </span><span style="color: #9CDCFE">isSpiderman</span><span style="color: #D4D4D4"> });</span></span>
 <span class="line"></span>
 <span class="line"></span>
-<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isSuperman</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4"> &amp;&amp; </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4">;</span></span>
-<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isBatman</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4"> &amp;&amp; </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4">;</span></span>
-<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isSpiderman</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4"> &amp;&amp; </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isSuperman</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4"> &amp;&amp; </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4">;         </span><span style="color: #6A9955">//  false</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isBatman</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4"> &amp;&amp; </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4">;            </span><span style="color: #6A9955">//  true  </span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isSpiderman</span><span style="color: #D4D4D4"> = </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4"> &amp;&amp; </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4">;       </span><span style="color: #6A9955">//  false   </span></span>
 <span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">(</span><span style="color: #CE9178">&#39;</span><span style="color: #D7BA7D">\n</span><span style="color: #CE9178">&#39;</span><span style="color: #D4D4D4">, { </span><span style="color: #9CDCFE">isSuperman</span><span style="color: #D4D4D4">, </span><span style="color: #9CDCFE">isBatman</span><span style="color: #D4D4D4">, </span><span style="color: #9CDCFE">isSpiderman</span><span style="color: #D4D4D4"> });</span></span>
-<span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//isSuperman = ( isBatman) ? &#39;ABC&#39; : &#39;XYZ&#39;;</span></span>
+<span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">isSuperman</span><span style="color: #D4D4D4"> = (</span><span style="color: #9CDCFE">isBatman</span><span style="color: #D4D4D4">) ? </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4"> : </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4">;</span></span>
 <span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">isSuperman</span><span style="color: #D4D4D4"> });</span></span>
 <span class="line"></span>
+<span class="line"></span>
 <span class="line"><span style="color: #D4D4D4">})();</span></span>
-<span class="line"></span>
-<span class="line"></span>
 <span class="line"></span>
 <span class="line"></span></code></pre>
