--- a/src/markdown-shiki/01-bases-de-typescript/02-tipos-de-datos/06-tuples-js.html
+++ b/src/markdown-shiki/01-bases-de-typescript/02-tipos-de-datos/06-tuples-js.html
@@ -10,5 +10,31 @@
 
 
 
+<pre class="shiki dark-plus" style="background-color: #1E1E1E" tabindex="0"><code class="language-js"><span class="line"><span style="color: #CE9178">&quot;use strict&quot;</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #6A9955">/*</span></span>
+<span class="line"><span style="color: #6A9955">    ---------------------------------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  udemy.antonydev.tech/  ----------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /cursos/  -----------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /typescript-completa-guia-manual-de-mano/  --------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /src/scripts/ts/01-bases-de-typescript/02-tipos-de-datos/  ----------</span></span>
+<span class="line"><span style="color: #6A9955">    ----------  /06-tuples.js  ------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">    ---------------------------------------------------------------------------------</span></span>
+<span class="line"><span style="color: #6A9955">*/</span></span>
+<span class="line"><span style="color: #D4D4D4">(() </span><span style="color: #569CD6">=&gt;</span><span style="color: #D4D4D4"> {</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">(</span><span style="color: #CE9178">&#39;</span><span style="color: #D7BA7D">\n</span><span style="color: #CE9178">&#39;</span><span style="color: #D4D4D4">);</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">warn</span><span style="color: #D4D4D4">(</span><span style="color: #CE9178">&#39;-----  06-tuples.js  -----&#39;</span><span style="color: #D4D4D4">);</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">(</span><span style="color: #CE9178">&#39;</span><span style="color: #D7BA7D">\n</span><span style="color: #CE9178">&#39;</span><span style="color: #D4D4D4">);</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #6A9955">//  -----  Tuplas  -----</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #569CD6">const</span><span style="color: #D4D4D4"> </span><span style="color: #4FC1FF">hero</span><span style="color: #D4D4D4"> = [</span><span style="color: #CE9178">&#39;Dr. Strange&#39;</span><span style="color: #D4D4D4">, </span><span style="color: #B5CEA8">100</span><span style="color: #D4D4D4">, </span><span style="color: #569CD6">true</span><span style="color: #D4D4D4">, [</span><span style="color: #CE9178">&#39;Ironman&#39;</span><span style="color: #D4D4D4">]];</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">hero</span><span style="color: #D4D4D4">[</span><span style="color: #B5CEA8">0</span><span style="color: #D4D4D4">] = </span><span style="color: #CE9178">&#39;Ironman&#39;</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">hero</span><span style="color: #D4D4D4">[</span><span style="color: #B5CEA8">1</span><span style="color: #D4D4D4">] = </span><span style="color: #B5CEA8">50</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">hero</span><span style="color: #D4D4D4">[</span><span style="color: #B5CEA8">2</span><span style="color: #D4D4D4">] = </span><span style="color: #569CD6">false</span><span style="color: #D4D4D4">;</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">hero</span><span style="color: #D4D4D4">[</span><span style="color: #B5CEA8">3</span><span style="color: #D4D4D4">] = [</span><span style="color: #CE9178">&#39;Stark&#39;</span><span style="color: #D4D4D4">, </span><span style="color: #CE9178">&#39;Spiderman&#39;</span><span style="color: #D4D4D4">];</span></span>
+<span class="line"><span style="color: #D4D4D4">    </span><span style="color: #9CDCFE">console</span><span style="color: #D4D4D4">.</span><span style="color: #DCDCAA">log</span><span style="color: #D4D4D4">({ </span><span style="color: #9CDCFE">hero</span><span style="color: #D4D4D4"> });</span></span>
+<span class="line"><span style="color: #D4D4D4">})();</span></span>
+<span class="line"></span>
+<span class="line"></span></code></pre>
+
+
 
 
