--- a/src/pages/01-bases-de-typescript/02-tipos-de-datos/11-tarea-tipos-de-datos.html
+++ b/src/pages/01-bases-de-typescript/02-tipos-de-datos/11-tarea-tipos-de-datos.html
@@ -13,13 +13,18 @@
 
     <h2 class="main__title"> 11 - Tarea Tipos de Datos </h2>
 
+    <div class="main__hero">
+        <!--  -----  Imagen Hero  -----  -->
+    </div>
 
     <section class="main__section">
 
-        <article class="section__img-script">
+        <article id="codeTs" class="section__img-script">
+            <!--  ***** Renderizar 'html' archivo .ts tipo 'markdown'  *****  -->
+        </article>
 
-
-
+        <article id="codeJs" class="section__img-script">
+            <!--  ***** Renderizar 'html' archivo .js tipo 'markdown'  *****  -->
         </article>
 
     </section>
